Fetching and displaying specific airline data. Fixed the issue when MetaMask will start having stuck transaction (gas limit calculation issue. Gave ownership color to the role in admin panel.

--- a/src/dapp/flightsurety.css
+++ b/src/dapp/flightsurety.css
@@ -130,7 +130,7 @@ nav {
 }
 
 .input-custom {
-  color: #9a9a9a;
+  color: #2f2f2f;
   border-radius: 12px;
   min-width: 40%;
   font-size: 1.25rem;
@@ -138,7 +138,7 @@ nav {
 }
 
 .input-amount {
-  color: #9a9a9a;
+  color: #2f2f2f;
   border-radius: 12px;
   width: 128px;
   font-size: 1.25rem;
